--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,12 @@ publish = false
 
 [dependencies]
 anyhow = "1.0.75"
+async-trait = "0.1.74"
 dotenvy_macro = "0.15.7"
 log = "0.4.20"
 pretty_env_logger = "0.5.0"
 reqwest = "0.11.22"
+serde = { version = "1.0.192", features = ["derive"] }
+surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
 teloxide = { version = "0.12.2", default-features = false, features = ["macros", "ctrlc_handler", "rustls", "sqlite-storage-rustls"] }
 tokio = { version = "1.34.0", features = ["full"] }
