--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ publish = false
 [dependencies]
 anyhow = "1.0.75"
 async-trait = "0.1.74"
+camino = "1.1.6"
 dotenvy_macro = "0.15.7"
 log = "0.4.20"
 pretty_env_logger = "0.5.0"
