--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ async-trait = "0.1.74"
 camino = "1.1.6"
 dotenvy_macro = "0.15.7"
 log = "0.4.20"
-pretty_env_logger = "0.5.0"
 reqwest = "0.11.22"
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
+simplelog = "0.12.1"
 surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
 teloxide = { version = "0.12.2", default-features = false, features = ["macros", "ctrlc_handler", "rustls", "sqlite-storage-rustls"] }
 tokio = { version = "1.34.0", features = ["full"] }
