--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,9 @@ surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
 teloxide = { version = "0.12.2", default-features = false, features = ["macros", "ctrlc_handler", "rustls", "sqlite-storage-rustls"] }
 tokio = { version = "1.34.0", features = ["full"] }
 tokio-util = "0.7.10"
+
+[profile.release]
+strip = true
+
+[profile.dev.package."*"]
+opt-level = 3
