--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+prod = []
+
 [dependencies]
 anyhow = "1.0.75"
 async-trait = "0.1.74"
