--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,21 @@
-[package]
-name = "app-pulse-bot"
+[workspace]
+members = ["crates/db"]
+
+[workspace.package]
 version = "0.1.0"
 edition = "2021"
 publish = false
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[package]
+name = "app-pulse-bot"
+version.workspace = true
+edition.workspace = true
+publish.workspace = true
 
 [features]
 prod = []
 
-[dependencies]
+[workspace.dependencies]
 anyhow = "1.0.75"
 async-trait = "0.1.74"
 camino = "1.1.6"
@@ -17,12 +23,26 @@ dotenvy_macro = "0.15.7"
 log = "0.4.20"
 reqwest = "0.11.22"
 serde = { version = "1.0.192", features = ["derive"] }
-serde_json = "1.0.108"
 simplelog = "0.12.1"
 surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
 teloxide = { version = "0.12.2", default-features = false, features = ["macros", "ctrlc_handler", "rustls", "sqlite-storage-rustls"] }
 tokio = { version = "1.34.0", features = ["full"] }
 tokio-util = "0.7.10"
+
+db = { path = "crates/db" }
+
+[dependencies]
+anyhow.workspace = true
+async-trait.workspace = true
+dotenvy_macro.workspace = true
+log.workspace = true
+reqwest.workspace = true
+serde.workspace = true
+simplelog.workspace = true
+teloxide.workspace = true
+tokio.workspace = true
+tokio-util.workspace = true
+db.workspace = true
 
 [profile.release]
 strip = true
