--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,5 @@
 [workspace]
-members = [
-	"crates/bot-handlers",
-	"crates/db",
-	"crates/sources",
-]
+members = ["crates/*"]
 
 [workspace.package]
 version = "0.1.0"
@@ -24,17 +20,28 @@ anyhow = "1.0.75"
 async-trait = "0.1.74"
 camino = "1.1.6"
 dotenvy_macro = "0.15.7"
+fluent = "0.16.0"
+fluent-syntax = "0.11.0"
+heck = "0.4.1"
+intl-memoizer = "0.5.1"
 log = "0.4.20"
+once_cell = "1.18.0"
+proc-macro2 = "1"
+quote = "1"
 reqwest = "0.11.22"
 serde = { version = "1.0.192", features = ["derive"] }
 simplelog = "0.12.1"
 surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
+syn = "2"
 teloxide = { version = "0.12.2", default-features = false, features = ["macros", "ctrlc_handler", "rustls", "sqlite-storage-rustls"] }
 tokio = { version = "1.34.0", features = ["full"] }
 tokio-util = "0.7.10"
+unic-langid = { version = "0.9.1", features = ["macros"] }
 
 bot-handlers = { path = "crates/bot-handlers" }
 db = { path = "crates/db" }
+interly = { path = "crates/interly" }
+interly-macros = { path = "crates/interly-macros" }
 sources = { path = "crates/sources" }
 
 [dependencies]
@@ -51,6 +58,7 @@ tokio-util.workspace = true
 
 bot-handlers.workspace = true
 db.workspace = true
+interly.workspace = true
 sources.workspace = true
 
 [profile.release]
