--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -7,6 +7,7 @@ publish.workspace = true
 [dependencies]
 anyhow.workspace = true
 camino.workspace = true
+i18n.workspace = true
 log.workspace = true
 serde.workspace = true
 surrealdb.workspace = true
