--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -9,6 +9,5 @@ anyhow.workspace = true
 camino.workspace = true
 i18n.workspace = true
 log.workspace = true
-serde.workspace = true
-surrealdb.workspace = true
+sqlx.workspace = true
 teloxide.workspace = true
