--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ log = "0.4.20"
 once_cell = "1.18.0"
 proc-macro2 = "1"
 quote = "1"
-reqwest = "0.11.22"
+reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
 serde = { version = "1.0.192", features = ["derive"] }
 simplelog = "0.12.1"
 sqlx = { version = "0.7.2", features = ["macros",  "migrate", "runtime-tokio",  "sqlite",  "tls-rustls"] }
