--- a/crates/bot-handlers/Cargo.toml
+++ b/crates/bot-handlers/Cargo.toml
@@ -12,6 +12,7 @@ teloxide.workspace = true
 tokio.workspace = true
 
 db.workspace = true
+common.workspace = true
 i18n.workspace = true
 interly.workspace = true
 sources.workspace = true
