fix: show errors from telegram source

--- a/crates/sources/Cargo.toml
+++ b/crates/sources/Cargo.toml
@@ -9,7 +9,9 @@ anyhow.workspace = true
 async-trait.workspace = true
 log.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 reqwest.workspace = true
+thiserror.workspace = true
 tokio.workspace = true
 
 common.workspace = true
