--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,10 +31,12 @@ proc-macro2 = "1"
 quote = "1"
 reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
 serde = { version = "1.0.192", features = ["derive"] }
+serde_json = "1.0.108"
 simplelog = "0.12.1"
 sqlx = { version = "0.7.2", features = ["macros",  "migrate", "runtime-tokio",  "sqlite",  "tls-rustls"] }
 syn = "2"
 teloxide = { version = "0.12.2", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
+thiserror = "1.0.50"
 tokio = { version = "1.34.0", features = ["full"] }
 tokio-util = "0.7.10"
 unic-langid = { version = "0.9.1", features = ["macros"] }
