--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ version.workspace = true
 edition.workspace = true
 publish.workspace = true
 
+[package.metadata.bot]
+# using this for storing version in db
+# this value is reading in crates/common/build.rs
+version = 0
+
 [features]
 prod = []
 
@@ -28,6 +33,7 @@ intl-memoizer = "0.5.1"
 log = "0.4.20"
 once_cell = "1.18.0"
 proc-macro2 = "1"
+lazy_static = "1.4.0"
 quote = "1"
 reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
 serde = { version = "1.0.192", features = ["derive"] }
@@ -39,6 +45,7 @@ teloxide = { version = "0.12.2", default-features = false, features = ["macros",
 thiserror = "1.0.50"
 tokio = { version = "1.34.0", features = ["full"] }
 tokio-util = "0.7.10"
+toml = "0.8.8"
 unic-langid = { version = "0.9.1", features = ["macros"] }
 
 bot-handlers = { path = "crates/bot-handlers" }
