--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -6,3 +6,9 @@ publish.workspace = true
 
 [dependencies]
 chrono.workspace = true
+lazy_static.workspace = true
+
+[build-dependencies]
+anyhow.workspace = true
+serde.workspace = true
+toml.workspace = true
