--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ fluent = "0.16.0"
 fluent-syntax = "0.11.0"
 heck = "0.4.1"
 intl-memoizer = "0.5.1"
-log = "0.4.20"
+log = { version = "0.4.20", features = ["kv_unstable"] }
 once_cell = "1.18.0"
 proc-macro2 = "1"
 lazy_static = "1.4.0"
@@ -69,6 +69,7 @@ tokio.workspace = true
 tokio-util.workspace = true
 
 bot-handlers.workspace = true
+common.workspace = true
 db.workspace = true
 sources.workspace = true
 
