--- a/crates/bot-handlers/Cargo.toml
+++ b/crates/bot-handlers/Cargo.toml
@@ -9,6 +9,7 @@ anyhow.workspace = true
 log.workspace = true
 reqwest.workspace = true
 teloxide.workspace = true
+thiserror.workspace = true
 tokio.workspace = true
 
 db.workspace = true
