--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ fluent = "0.16.0"
 fluent-syntax = "0.11.0"
 heck = "0.4.1"
 intl-memoizer = "0.5.1"
-log = { version = "0.4.20", features = ["kv_unstable"] }
+log = { version = "0.4.21", features = ["kv"] }
 once_cell = "1.18.0"
 proc-macro2 = "1"
 lazy_static = "1.4.0"
