nixpkgs: get updates

--- a/crates/sources/Cargo.toml
+++ b/crates/sources/Cargo.toml
@@ -8,9 +8,10 @@ publish.workspace = true
 anyhow.workspace = true
 async-trait.workspace = true
 log.workspace = true
+opensearch.workspace = true
+reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-reqwest.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tokio-util.workspace = true
