--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ heck = "0.5.0"
 intl-memoizer = "0.5.1"
 log = { version = "0.4.21", features = ["kv"] }
 once_cell = "1.18.0"
+opensearch = { version = "2.3.0", default-features = false, features = ["rustls-tls"] }
 proc-macro2 = "1"
 quote = "1"
 reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
