--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -5,14 +5,14 @@ edition.workspace = true
 publish.workspace = true
 
 [dependencies]
-anyhow.workspace = true
 bon.workspace = true
-i18n.workspace = true
 log.workspace = true
 sqlx.workspace = true
 teloxide.workspace = true
+thiserror.workspace = true
 
 common.workspace = true
+i18n.workspace = true
 
 [dev-dependencies]
 tokio.workspace = true
