--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ test-prod = []
 [workspace.dependencies]
 anyhow = "1.0.75"
 async-trait = "0.1.74"
+bon = "3.3.2"
 camino = "1.1.6"
 chrono = "0.4.31"
 dotenvy_macro = "0.15.7"
