--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -6,6 +6,7 @@ publish.workspace = true
 
 [dependencies]
 anyhow.workspace = true
+bon.workspace = true
 i18n.workspace = true
 log.workspace = true
 sqlx.workspace = true
