--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -7,6 +7,7 @@ publish.workspace = true
 [dependencies]
 chrono.workspace = true
 lazy_static.workspace = true
+log.workspace = true
 
 [build-dependencies]
 anyhow.workspace = true
