--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -6,7 +6,7 @@ publish.workspace = true
 
 [dependencies]
 chrono.workspace = true
-lazy_static.workspace = true
+dotenvy_macro.workspace = true
 log.workspace = true
 
 [build-dependencies]
