--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,13 +35,15 @@ intl-memoizer = "0.5.2"
 log = { version = "0.4.24", features = ["kv"] }
 once_cell = "1.20.2"
 opensearch = { version = "2.3.0", default-features = false, features = ["rustls-tls"] }
+paste = "1.0.15"
 proc-macro2 = "1"
 quote = "1"
 reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 simplelog = "0.12.2"
-sqlx = { version = "0.8.3", features = ["macros",  "migrate", "runtime-tokio",  "sqlite",  "tls-rustls"] }
+sqlx = { version = "0.8.3", features = ["macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls"] }
+sqlx_migrator = { version = "0.16.2", features = ["sqlite"] }
 syn = "2"
 teloxide = { version = "0.13.0", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
 thiserror = "2.0.11"
