--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -5,9 +5,12 @@ edition.workspace = true
 publish.workspace = true
 
 [dependencies]
+async-trait.workspace = true
 bon.workspace = true
 log.workspace = true
+paste.workspace = true
 sqlx.workspace = true
+sqlx_migrator.workspace = true
 teloxide.workspace = true
 thiserror.workspace = true
 
