--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -16,6 +16,7 @@ thiserror.workspace = true
 
 common.workspace = true
 i18n.workspace = true
+macros.workspace = true
 
 [dev-dependencies]
 tokio.workspace = true
