macro: improvements, generate doc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ serde_json = "1.0.135"
 simplelog = "0.12.2"
 sqlx = { version = "0.8.3", features = ["macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls"] }
 sqlx_migrator = { version = "0.16.2", features = ["sqlite"] }
-syn = "2"
+syn = { version = "2", features = ["printing"] }
 teloxide = { version = "0.13.0", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
 thiserror = "2.0.11"
 tokio = { version = "1.43.0", features = ["full"] }
