update struct: use bon for Builder

--- a/crates/sources/Cargo.toml
+++ b/crates/sources/Cargo.toml
@@ -7,6 +7,7 @@ publish.workspace = true
 [dependencies]
 anyhow.workspace = true
 async-trait.workspace = true
+bon.workspace = true
 log.workspace = true
 opensearch.workspace = true
 reqwest.workspace = true
