--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -8,6 +8,7 @@ publish.workspace = true
 chrono.workspace = true
 dotenvy_macro.workspace = true
 log.workspace = true
+simplelog = "0.12.2"
 tokio.workspace = true
 tokio-util.workspace = true
 
