--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ fluent = "0.16.1"
 fluent-syntax = "0.11.1"
 heck = "0.5.0"
 intl-memoizer = "0.5.2"
-log = { version = "0.4.24", features = ["kv"] }
+log = { version = "0.4.25", features = ["kv"] }
 once_cell = "1.20.2"
 opensearch = { version = "2.3.0", default-features = false, features = ["rustls-tls"] }
 paste = "1.0.15"
@@ -52,6 +52,7 @@ tokio = { version = "1.43.0", features = ["full"] }
 tokio-util = "0.7.13"
 toml = "0.8.19"
 unic-langid = { version = "0.9.5", features = ["macros"] }
+versions = "6.3.2"
 
 bot-handlers = { path = "crates/bot-handlers" }
 common = { path = "crates/common" }
